k8s/apps/webtoon/webtoon-api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webtoon-api
spec:
  type: ClusterIP
  selector:
    component: webtoon-api
  ports:
    - name: http
      port: 8000
      targetPort: http
  sessionAffinity: None
