k8s/apps/webtoon/webtoon-api/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "webtoon-api-ingress"
  namespace: "webtoon"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"
    nginx.ingress.kubernetes.io/http2-enabled: "false"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"  # 120 seconds, but you can adjust as necessary
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"  # This is optional but is for the timeout for sending data to the backend

spec:
  ingressClassName: public
  rules:
    - host: "api.webtoon.gastbob40.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "webtoon-api"
                port:
                  number: 8000
  tls:
    - hosts:
        - "api.webtoon.gastbob40.com"
      secretName: "webtoon-api-ingress-tls"
